docs: documentation updates
Signed-off-by: kl7sn <mex7.0828@gmail.com>

--- a/docs/1.1 dataflow.md
+++ b/docs/1.1 dataflow.md
@@ -1,5 +1,5 @@
 
-## 数据采集流程
+## Data Acquisition Process
 
 1. Data acquisition with Fluent Bit, write data to Kafka
 2. ClickHouse consumes Kafka, then write data to the stream table
