--- a/docs/1.1 dataflow-CN.md
+++ b/docs/1.1 dataflow-CN.md
@@ -1,18 +1,18 @@
-
-## 数据采集流程
+# 数据采集流程
 
 1. 利用 Fluent Bit 进行数据采集，写入 Kafka
 2. ClickHouse 消费 Kafka 将数据写入 Stream 表中
-3. 使用 ClickHouse 的 Materialized view 读取 Stream 表，按照自定义规则处理读取到得数据，完成处理后写入 Final log 后可以再管理后台进行查看 
+3. 使用 ClickHouse 的 Materialized view 读取 Stream 表，按照自定义规则处理读取到得数据，完成处理后写入 Final log 后可以再管理后台进行查看
 
 ![https://helpcenter.shimonote.com/uploads/0LNQ4VUU01CF2.png](https://helpcenter.shimonote.com/uploads/0LNQ4VUU01CF2.png)
 
-### Fluent Bit 数据采集
+## Fluent Bit 数据采集
 
 按照以下配置开始进行日志数据的采集，包含了原始日志数据和自定义的容器相关数据
 
-fluent-bit.conf
-```
+`fluent-bit.conf` 配置样例如下：
+
+```conf
 [SERVICE]
     Flush         1
     Log_Level     debug
@@ -29,8 +29,9 @@ fluent-bit.conf
 @Set cluster_name=xxx
 ```
 
-input-kubernetes.conf 
-```
+`input-kubernetes.conf` 配置样例如下：
+
+```conf
 [INPUT]
     Name              tail
     Tag               ego.*
@@ -44,8 +45,9 @@ input-kubernetes.conf
     Refresh_Interval  10
 ```
 
-parsers.conf
-```
+`parsers.conf` 配置样例如下：
+
+```conf
 [PARSER]
     Name        docker
     Format      json
@@ -54,8 +56,9 @@ parsers.conf
     Time_Keep   On
 ```
 
-filter.conf
-```
+`filter.conf` 配置样例如下：
+
+```conf
 [FILTER]
     Name                kubernetes
     Match               ego.*
@@ -88,8 +91,9 @@ filter.conf
     Add             _node_ip_ ${NODE_IP}
 ```
 
-output-kafka.conf
-```
+`output-kafka.conf` 配置样例如下：
+
+```conf
 [OUTPUT]
     Name           kafka
     Match          kube.*
@@ -102,31 +106,34 @@ output-kafka.conf
     rdkafka.request.required.acks 1
 ```
 
-### ClickHouse 消费数据
-- app_stdout
-- app_stdout_view
-- app_stdout_stream
+## ClickHouse 消费数据
 
-```
+* app_stdout_stream：原始日志表
+* app_stdout_view：物化视图表
+* app_stdout：完成处理的日志表
+
+```sql
 create table demo.app_stdout_stream
 (
-	log String,
-	_source_ String,
-	_time_ String,
-	_pod_name_ String,
-	_namespace_ String,
-	_node_name_ String,
-	_container_name_ String,
-	_cluster_ String,
-	_log_agent_ String,
-	_node_ip_ String
+    log String,
+    _source_ String,
+    _time_ String,
+    _pod_name_ String,
+    _namespace_ String,
+    _node_name_ String,
+    _container_name_ String,
+    _cluster_ String,
+    _log_agent_ String,
+    _node_ip_ String
 )
 engine = Kafka SETTINGS kafka_broker_list = '127.0.0.1:9092', kafka_topic_list = 'kafka-topic-xxx', kafka_group_name = 'kafka-topic-xxx-group', kafka_format = 'JSONEachRow', kafka_num_consumers = 1;
 ```
 
-### Materialized View 处理数据
+## Materialized View 处理数据
+
 1. 建立数据存储表 app_stdout
-```
+
+```sql
 create table if not exists demo.app_stdout
 (
   _time_ DateTime64(3),
@@ -146,7 +153,8 @@ SETTINGS index_granularity = 8192;
 ```
 
 2. 建立数据处理视图，将数据从 app_stdout_stream 转入 app_stdout
-```
+
+```sql
 DROP view app_stdout_view;
 CREATE MATERIALIZED VIEW app_stdout_view TO app_stdout AS
 SELECT
@@ -166,4 +174,5 @@ FROM app_stdout_stream where JSONHas(log, 'ts') = 0;
 mogo 系统展示的就是 app_stdout 中的数据。
 
 ## 参考文档
+
 [https://docs.fluentbit.io/manual/](https://docs.fluentbit.io/manual/)
