--- a/docs/1.1 dataflow.md
+++ b/docs/1.1 dataflow.md
@@ -1,18 +1,19 @@
-
-## Data Acquisition Process
+# Data Acquisition Process
 
 1. Data acquisition with Fluent Bit, write data to Kafka
+
 2. ClickHouse consumes Kafka, then write data to the stream table
+
 3. Reading a Stream table using the Material ized view of ClickHouse，Process read data according to custom rule. After the processing, write data to the data table, it can be viewed in mogo. 
 
 ![https://helpcenter.shimonote.com/uploads/0LNQ4VUU01CF2.png](https://helpcenter.shimonote.com/uploads/0LNQ4VUU01CF2.png)
 
-### Fluent Bit Setting
-
+## Fluent Bit Setting
 
 Perform the following operations to collect log data, including original log data and custom container-related data.
 fluent-bit.conf
-```
+
+```conf
 [SERVICE]
     Flush         1
     Log_Level     debug
@@ -30,7 +31,8 @@ fluent-bit.conf
 ```
 
 input-kubernetes.conf 
-```
+
+```conf
 [INPUT]
     Name              tail
     Tag               ego.*
@@ -45,7 +47,8 @@ input-kubernetes.conf
 ```
 
 parsers.conf
-```
+
+```conf
 [PARSER]
     Name        docker
     Format      json
@@ -55,7 +58,8 @@ parsers.conf
 ```
 
 filter.conf
-```
+
+```conf
 [FILTER]
     Name                kubernetes
     Match               ego.*
@@ -89,7 +93,8 @@ filter.conf
 ```
 
 output-kafka.conf
-```
+
+```conf
 [OUTPUT]
     Name           kafka
     Match          kube.*
@@ -102,12 +107,13 @@ output-kafka.conf
     rdkafka.request.required.acks 1
 ```
 
-### ClickHouse 
-- app_stdout
-- app_stdout_view
-- app_stdout_stream
+## ClickHouse
 
-```
+* app_stdout
+* app_stdout_view
+* app_stdout_stream
+
+```sql
 create table demo.app_stdout_stream
 (
 	log String,
@@ -124,9 +130,11 @@ create table demo.app_stdout_stream
 engine = Kafka SETTINGS kafka_broker_list = '127.0.0.1:9092', kafka_topic_list = 'kafka-topic-xxx', kafka_group_name = 'kafka-topic-xxx-group', kafka_format = 'JSONEachRow', kafka_num_consumers = 1;
 ```
 
-### Data Processing
+## Data Processing
+
 1. Create Table 'app_stdout'
-```
+
+```sql
 create table if not exists demo.app_stdout
 (
   _time_ DateTime64(3),
@@ -144,8 +152,10 @@ engine = MergeTree PARTITION BY toYYYYMMDD(_time_)
 ORDER BY _time_
 SETTINGS index_granularity = 8192;
 ```
+
 2. Create view to transfer data from the app_stdout_stream to the app_stdout
-```
+
+```sql
 DROP view app_stdout_view;
 CREATE MATERIALIZED VIEW app_stdout_view TO app_stdout AS
 SELECT
@@ -161,7 +171,9 @@ _pod_name_,
 log AS _raw_log_,
 FROM app_stdout_stream where JSONHas(log, 'ts') = 0;
 ```
+
 The Mogo system displays the data in the app_stdout
 
 ## Reference Documentation
+
 [https://docs.fluentbit.io/manual/](https://docs.fluentbit.io/manual/)
