--- a/docs/1.2 domain-CN.md
+++ b/docs/1.2 domain-CN.md
@@ -1,16 +1,17 @@
 # 自定义域名配置
 
-配置自定义域名为 xxx.com
+假设配置的自定义域名为 xxx.com
 
 1. 调整服务配置
 
-```
+```toml
 [app]
 rootURL = "http://xxx.com"
 ```
 
 2. NGINX 配置调整，可以开启 gzip
-```bash
+
+```conf
 server {
     listen 80;
     server_name xxx.com;
@@ -51,4 +52,3 @@ server {
     }
 }
 ```
-
