--- a/docs/1.2 domain.md
+++ b/docs/1.2 domain.md
@@ -4,13 +4,14 @@ Configure the custom domain name as xxx.com
 
 1. Adjust the service configuration
 
-```
+```toml
 [app]
 rootURL = "http://xxx.com"
 ```
 
 2. NGINX configuration adjustment, gzip can be enabled
-```bash
+
+```conf
 server {
     listen 80;
     server_name xxx.com;
@@ -35,4 +36,3 @@ server {
     }
 }
 ```
-
