fix: change table prefix mogo_ -> cv_ and auto rename when upgrading

--- a/docs/1.1 dataflow-CN.md
+++ b/docs/1.1 dataflow-CN.md
@@ -171,7 +171,7 @@ log AS _raw_log_,
 FROM app_stdout_stream where JSONHas(log, 'ts') = 0;
 ```
 
-mogo 系统展示的就是 app_stdout 中的数据。
+clickvisual 系统展示的就是 app_stdout 中的数据。
 
 ## 参考文档
 
