--- a/docs/1.1 dataflow.md
+++ b/docs/1.1 dataflow.md
@@ -4,7 +4,7 @@
 
 2. ClickHouse consumes Kafka, then write data to the stream table
 
-3. Reading a Stream table using the Material ized view of ClickHouse，Process read data according to custom rule. After the processing, write data to the data table, it can be viewed in mogo. 
+3. Reading a Stream table using the Material ized view of ClickHouse，Process read data according to custom rule. After the processing, write data to the data table, it can be viewed in clickvisual. 
 
 ![https://helpcenter.shimonote.com/uploads/0LNQ4VUU01CF2.png](https://helpcenter.shimonote.com/uploads/0LNQ4VUU01CF2.png)
 
@@ -172,7 +172,7 @@ log AS _raw_log_,
 FROM app_stdout_stream where JSONHas(log, 'ts') = 0;
 ```
 
-The Mogo system displays the data in the app_stdout
+The clickvisual system displays the data in the app_stdout
 
 ## Reference Documentation
 
